fixed content alignment and wrapper

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,8 @@ img {
 
 body {
   color: black;
+  margin: 0;
+  padding: 0;
 }
 
 a:link {
@@ -31,9 +33,14 @@ a:hover {
   text-decoration: none;
 }
 
+h2 {
+  margin:0;
+}
+
 .content-wrap {
-  width: 900px;
+  width: 800px;
   margin: 0 auto;
+  padding: 60px 0;
 }
 
 /* Profile
@@ -60,6 +67,7 @@ header {
   text-decoration: none;
   padding: 8px;
   border-radius: 4px;
+  display: inline-block;
 }
 
 .projects .btn:hover {
